--- a/assest/css/styles.scss
+++ b/assest/css/styles.scss
@@ -1,4 +1,32 @@
 @import "variables.scss";
+body{
+    padding: 0;
+    margin: 0;
+}
+.app{
+    padding: 0;
+    margin: 0;
+}
+.navBar{
+    height:30px;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    background: #ccc;
+    padding: 15px;
+    ul{
+        list-style: none;
+        display: flex;
+        li{
+            margin: 15px 5px;
+        }
+    }
+}
+
+
+
+
+
 
 
 @import "media/xxl.scss";
