--- a/assest/css/styles.scss
+++ b/assest/css/styles.scss
@@ -2,6 +2,8 @@
 body{
     padding: 0;
     margin: 0;
+    font-family: 'Montserrat', sans-serif;
+
 }
 .app{
     padding: 0;
@@ -22,11 +24,6 @@ body{
         }
     }
 }
-
-
-
-
-
 
 
 @import "media/xxl.scss";
